--- a/grpc-benchmark/index.html
+++ b/grpc-benchmark/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>gRPC-Web Benchmark</title>
+<title>gRPC-Web Example</title>
 <script src="./dist/main.js"></script>
 </head>
 <body>
-  <p>Open up the developer console and see the Network section</p>
+  <p>Open up the developer console and see the logs for the output.</p>
 </body>
 </html>
